          --interactive                 undo previous --non-interactive
          --no-standard-rcfiles         replaces --norc
          --standard-rcfiles            undo previous --no-standard-rcfiles
          --no-builtin-rcfile           replaces --nostd
          --builtin-rcfile              undo previous --no-builtin-rcfile
          --clear-rcfiles               undo previous --rcfile
          --verbosity <arg>             set verbosity level

        - Global options now hidden:
          --roster-cache-performance-log

        - New command options:
          add
            --no-recursive                  undo previous --recursive
            --respect-ignore                undo previous --no-respect-ignore
            --no-unknown                    undo previous --unknown
          bisect *, checkout, pivot_root, pluck, update, automate update
            --no-move-conflicting-paths     undo previous --move-conflicting-paths
          diff
            --without-header                undo previous --with-header
            --show-encloser                 undo previous --show-encloser
          disapprove, suspend
            --no-update                     undo previous --update
          drop
            --no-recursive                  undo previous --recursive
          explicit_merge, merge, merge_into_dir propagate
            --no-resolve-conflicts          undo previous --resolve-conflicts
            --no-update                     undo previous --update
          log
            --no-brief                      undo previous --brief
            --no-diffs                      undo previous --diffs
            --clear-from                    undo previous --from
            --files                         undo previous --no-files
            --graph                         undo previous --no-graph
            --merges                        undo previous --no-merges
            --clear-to                      undo previous --to
          import