@@ -9,10 +9,10 @@ commit()
 -- check that tickers are quiet
 srv = netsync.start()
 
-check(mtn2("--rcfile=netsync.lua", "pull", srv.address, "testbranch", "--verbosity=-2"))
+check(mtn2("--rcfile=netsync.lua", "pull", srv.address, "testbranch", "-q", "-q"))
 
 srv:stop()
 
 -- check that warnings aren't...
 -- (list keys with a pattern that doesn't match anything generates a warning)
-check(mtn("--verbosity=-2", "list", "keys", "foo"))
+check(mtn("-q", "-q", "list", "keys", "foo"))
